ユーザー登録、ログイン、ログアウト機能を作成した

--- a/app/views/feeds/_form.html.erb
+++ b/app/views/feeds/_form.html.erb
@@ -1,9 +1,11 @@
-<%= form_with(model: feed, local: true, url: choose_new_or_edit ) do |form| %>
+<%= form_with(model: feed, local: true, url:choose_new_or_edit) do |form| %>
   <div class="field">
     <%= form.label :image %>
     <%= image_tag(@feed.image.url) if @feed.image && @feed.image.url %>
     <%= form.file_field :image %>
     <%= form.hidden_field :image_cache %>
+    <%= form.label :writing %>
+    <%= form.text_field :writing %>
   </div>
   <div class="actions">
     <%= form.submit %>
