--- a/app/views/feeds/confirm.html.erb
+++ b/app/views/feeds/confirm.html.erb
@@ -1,10 +1,13 @@
 <h1>確認画面</h1>
 <%= form_with(model: @feed, url: feeds_path, local: true) do |form| %>
-<%= image_tag(@feed.image.url) if @feed.image && @feed.image.url %>
+  <p>Image：<%= image_tag(@feed.image.url) if @feed.image && @feed.image.url %></p>
   <%= form.hidden_field :image_cache %>
+  <%= form.hidden_field :writing %>
+  <p>本文：<%= @feed.writing %></p>
   <%= form.submit "投稿する" %>
 <% end %>
 <%= form_with(model:@feed, url:new_feed_path, local:true, method:"get") do |form| %>
   <%= form.hidden_field :image_cache %>
+  <%= form.hidden_field :writing %>
   <%= form.submit "戻る", name: "back" %>
 <% end %>
