--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,11 +1,14 @@
 <p id="notice"><%= notice %></p>
+<%= link_to "Logout", session_path(current_user.id), method: :delete %>
 
 <h1>Feeds</h1>
 
 <table>
   <thead>
     <tr>
+      <th>User</th>
       <th>Image</th>
+      <th>Writing</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,7 +16,9 @@
   <tbody>
     <% @feeds.each do |feed| %>
       <tr>
-        <td><%= feed.image %></td>
+        <td><%= feed.user.name %></td>
+        <td><%= image_tag feed.image.url %></td>
+        <td><%= feed.writing %></td>
         <td><%= link_to 'Show', feed %></td>
         <td><%= link_to 'Edit', edit_feed_path(feed) %></td>
         <td><%= link_to 'Destroy', feed, method: :delete, data: { confirm: 'Are you sure?' } %></td>
