--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,18 +1,20 @@
 <p id="notice"><%= notice %></p>
-<%= link_to "Logout", session_path(current_user.id), method: :delete %>
-
-<h1>Feeds</h1>
-
+<div class="btn01">
+  <%= link_to "Logout", session_path(current_user.id), method: :delete %>
+</div>
+<div class="btn01">
+  <%= link_to 'New Feed', new_feed_path %>
+</div>
+<h1>List page</h1>
 <table>
   <thead>
     <tr>
       <th>User</th>
       <th>Image</th>
       <th>Writing</th>
-      <th colspan="3"></th>
+      <th colspan="3">Corresponding button</th>
     </tr>
   </thead>
-
   <tbody>
     <% @feeds.each do |feed| %>
       <tr>
@@ -28,7 +30,4 @@
     <% end %>
   </tbody>
 </table>
-
 <br>
-
-<%= link_to 'New Feed', new_feed_path %>
